tests/ui/feature-gates/feature-gate-naked_functions.stderr
error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:5:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:11:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #90957 <https://github.com/rust-lang/rust/issues/90957> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
